Fixed z-index

--- a/src/styles/error.css
+++ b/src/styles/error.css
@@ -3,6 +3,7 @@
 	width: 100%;
 	display: flex;
 	justify-content: center;
+	z-index: 15;
 }
 
 .error-popup-list>div {
