--- a/src/styles/friendslist.css
+++ b/src/styles/friendslist.css
@@ -11,7 +11,7 @@
 	width: var(--content-width);
 	background-color: var(--main-color-2);
 	border-radius: 5px;
-	z-index: 20;
+	z-index: 30;
 	margin: .5rem .5rem calc(.5rem + 20px) .5rem;
 }
 
@@ -32,7 +32,7 @@
 
 .blur-bg {
 	position: absolute;
-	z-index: 10;
+	z-index: 20;
 	width: 100%;
 	height: 100vh;
 	backdrop-filter: blur(4px);
